<resources>
    <string name="app_name">Groov</string>
    <string name="pullups">Pull-Ups</string>
    <string name="did_button_template">+%d reps</string>
    <string name="no_sets_yet">No reps yet</string>
    <string name="last_set_template">Last set: %d reps / %s</string>
    <string name="empty">No current challenges</string>
    <string name="create_button">Create first challenge</string>
    <string name="hint_challenge_name">Challenge name</string>
    <string name="hint_reps_in_set">Reps per set</string>
    <string name="hint_rest_duration">Rest duration (mins)</string>
    <string name="create_challenge_button">Create</string>
    <string name="remind">Remind me when rest is over</string>
    <string name="today">today</string>
    <string name="did_different_reps">&lt;u&gt;Add different number of reps&lt;/u&gt;</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="error_less_than_one_rep">Sorry, cannot do less than one rep.</string>
    <string name="hint_reps">Reps</string>
    <string name="reps_added">💪 %d reps added! 💪</string>
    <string name="create_challenge_spinner_item">Create new challenge&#x2026;</string>
</resources>
